--- a/src/main/CSS/index.scss
+++ b/src/main/CSS/index.scss
@@ -3,7 +3,7 @@
 body {
   overflow-y: hidden;
   overflow-x: hidden;
-  background-color: #313030;
+  background-color: #1E1E1E;
   backdrop-filter: blur(4px);
   width: 100%;
   background-size: cover;
