--- a/src/main/CSS/index.css
+++ b/src/main/CSS/index.css
@@ -2,7 +2,7 @@
 body {
   overflow-y: hidden;
   overflow-x: hidden;
-  background-color: #313030;
+  background-color: #1E1E1E;
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   width: 100%;
